--- a/style.css
+++ b/style.css
@@ -1,9 +1,25 @@
-
-p {
-    font-size: 11px;
+* {
+    box-sizing: border-box;
+    margin: 0;
 }
 
-.weather-container{
-    width: 750px;
-    margin: auto;
+
+p {
+  font-size: 11px;
+}
+
+.weather-container {
+  width: 100%;
+  padding-left: 20%;
+  padding-right: 20%;
+  margin: auto;
+}
+
+.container-auto {
+  /* width: 300px; */
+  min-width: 100%;
+  max-width: 100%;
+  min-height: 100%;
+  max-height: 100%;
+  margin: auto;
 }
