--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 p {
   font-size: 11px;
+  font-weight: bold;
 }
 
 .weather-container {
@@ -16,10 +17,60 @@ p {
 }
 
 .container-auto {
-  /* width: 300px; */
   min-width: 100%;
   max-width: 100%;
   min-height: 100%;
   max-height: 100%;
   margin: auto;
+}
+
+
+/* Define background colors for different weather conditions */
+.weather-card {
+  background-color: #ffffff; /* Default background color */
+}
+
+.weather-card.sunny {
+  background-image: url(./images/sun.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: inset 0 0 0 2000px rgba(244, 244, 244, 0.7);
+  filter: invert(11%);
+}
+
+.weather-card.cloudy {
+  background-image: url(./images/cloud.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: inset 0 0 0 2000px rgba(244, 244, 244, 0.6);
+  filter: invert(11%);
+}
+
+.weather-card.rainy {
+  background-image: url(./images/light-rain.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: inset 0 0 0 2000px rgba(244, 244, 244, 0.7);
+  filter: invert(11%);
+}
+
+.weather-card.snowy {
+  background-image: url(./images/snow.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: inset 0 0 0 2000px rgba(244, 244, 244, 0.7);
+  filter: invert(11%);
+}
+
+.weather-card.stormy {
+  background-image: url(./images/storm.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: inset 0 0 0 2000px rgba(244, 244, 244, 0.7);
+  filter: invert(11%);
 }
